2011-04-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* queryOperation.c, providerDrv.c
	[ 3261868 ] Enum CQL filter on NULL cause incorrect rsp
	(based on patch by  cpoblete)

2011-03-31  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* elementCapabiltiesProvider.c:
	[ 3265502 ] CMPIContext not released in elementCapabilitiesProvider

2011-03-30 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* queryOperation.c
	[ 3206663 ] Enum CQL filter on NULL cause segfault and incorrect rsp
	(based on patch by  cpoblete)

2011-03-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopProvider.c, indCIMXMLHandler.c:
	[ 3038078 ] Can create indication filters and destinations w/o key props

2011-03-08  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlGen.c:
	[ 3202420 ] CDATA value in a string property is improperly XML escaped
	(patch by Chris Poblete)

	* httpAdapter.c, sfcBasicPAMAuthentication.c:
	[ 3203290 ] Basic Auth Should Consider Expired Passwords

2011-02-23  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c: 
	[ 3175770 ] execQuery returns multiple instances of same object

2011-02-17  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* result.c: 
	[ 3185178 ] Wrong classname for returned instances from execQuery

2011-02-11  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* brokerUpc.c:
	[ 3172080 ] deliverIndication does not check for matching FROM classes

2011-02-10  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	[ 3162016 ] sfcbd Segmentation fault in cleanupCimXmlRequest

2010-12-23  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* mofpp.c:
	[ 3054618 ] mofpp is overaggressive when detecting comments

2010-12-21  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlRequest.c:
	[ 3130727 ] CMPIPropertyMIFT.setProperty() missing objectpath keys

2010-11-29  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* queryLexer.l, test/TestProviders/cmpiTestMethodProvider.c,